<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PokerNFC</string>
    <string name="action_settings">Settings</string>
    <string name="pot">pot</string>
    <string name="player">player</string>
    <string name="title_activity_pot">PotActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_player">Player</string>
    <string name="textview_currentpot">Current Pot :</string>
    <string name="textview_potvalue">0 CHF</string>
    <string name="textview_cash">Cash :</string>
    <string name="textview_cashvalue">1000 CHF</string>
    <string name="title_activity_activity_to_service">ActivityToService</string>
    <string name="_10_">-10.-</string>
    <string name="for_test">for test</string>
    <string name="title_activity_beam">BeamActivity</string>
    <string name="bid">Bid :</string>
    <string name="call">Call</string>

</resources>
