<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backrepeat"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PlayerActivity" >

    <TextView
        android:id="@+id/tvCash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview_cash"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/tvCashValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="@string/textview_cashvalue"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="italic" />

    <Button
        android:id="@+id/btPayCash"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onPayCash"
        android:text="@string/_10_" />

    <GridLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.24"
        android:columnCount="1" >

        <TextView
            android:id="@+id/textView1"
            android:layout_column="0"
            android:layout_gravity="left|top"
            android:layout_row="0"
            android:textColor="@android:color/primary_text_dark"
            android:text="Server Ip : " />

        <TextView
            android:id="@+id/textView2"
            android:layout_column="0"
            android:layout_gravity="left|center_vertical"
            android:layout_row="0"
            android:textColor="@android:color/primary_text_dark"
            android:text="Server Port : " />

        <TextView
            android:id="@+id/textView3"
            android:layout_column="0"
            android:layout_gravity="left|bottom"
            android:layout_row="0"
            android:textColor="@android:color/primary_text_dark"
            android:text="My ID : " />

        <TextView
            android:id="@+id/txtIp"
            android:layout_column="0"
            android:layout_gravity="center_horizontal|top"
            android:layout_row="0"
            android:text="0"
            android:textColor="@android:color/primary_text_dark" />

        <TextView
            android:id="@+id/txtPort"
            android:layout_column="0"
            android:layout_gravity="center"
            android:layout_row="0"
            android:text="0"
            android:textColor="@android:color/primary_text_dark" />

        <TextView
            android:id="@+id/txtNextID"
            android:layout_column="0"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_row="0"
            android:text="0"
            android:textColor="@android:color/primary_text_dark" />

    </GridLayout>

</LinearLayout>